--- a/force-app/main/default/classes/Address.cls
+++ b/force-app/main/default/classes/Address.cls
@@ -13,36 +13,42 @@ public with sharing class Address {
     * The name of the city.
     * @return city
     */
+    @namespaceAccessible
     public String city { get; set; }
 
     /**
     * The two-character country code as defined in ISO-3166-1 alpha-2. For example, **US**.\n> If you don\'t know the country or are not collecting the country from the shopper, provide `country` as `ZZ`.
     * @return country
     */
+    @namespaceAccessible
     public String country { get; set; }
 
     /**
     * The number or name of the house.
     * @return houseNumberOrName
     */
+    @namespaceAccessible
     public String houseNumberOrName { get; set; }
 
     /**
     * A maximum of five digits for an address in the US, or a maximum of ten characters for an address in all other countries.
     * @return postalCode
     */
+    @namespaceAccessible
     public String postalCode { get; set; }
 
     /**
     * State or province codes as defined in ISO 3166-2. For example, **CA** in the US or **ON** in Canada.\n> Required for the US and Canada.
     * @return stateOrProvince
     */
+    @namespaceAccessible
     public String stateOrProvince { get; set; }
 
     /**
     * The name of the street.\n> The house number should not be included in this field; it should be separately provided via `houseNumberOrName`.
     * @return street
     */
+    @namespaceAccessible
     public String street { get; set; }
 
     @namespaceAccessible
