--- a/force-app/main/default/classes/AdyenClient.cls
+++ b/force-app/main/default/classes/AdyenClient.cls
@@ -10,6 +10,8 @@
 
 @namespaceAccessible
 public with sharing class AdyenClient {
+
+    @namespaceAccessible
     public AdyenConfig config;
 
     @namespaceAccessible
