--- a/force-app/main/default/classes/BrowserInfo.cls
+++ b/force-app/main/default/classes/BrowserInfo.cls
@@ -15,54 +15,63 @@ public with sharing class BrowserInfo {
     * The accept header value of the shopper\'s browser.
     * @return acceptHeader
     */
+    @namespaceAccessible
     public String acceptHeader { get; set; }
 
     /**
     * The color depth of the shopper\'s browser in bits per pixel. This should be obtained by using the browser\'s `screen.colorDepth` property. Accepted values: 1, 4, 8, 15, 16, 24, 30, 32 or 48 bit color depth.
     * @return colorDepth
     */
+    @namespaceAccessible
     public Integer colorDepth { get; set; }
 
     /**
     * Boolean value indicating if the shopper\'s browser is able to execute Java.
     * @return javaEnabled
     */
+    @namespaceAccessible
     public Boolean javaEnabled { get; set; }
 
     /**
     * Boolean value indicating if the shopper\'s browser is able to execute JavaScript. A default \'true\' value is assumed if the field is not present.
     * @return javaScriptEnabled
     */
+    @namespaceAccessible
     public Boolean javaScriptEnabled { get; set; }
 
     /**
     * The `navigator.language` value of the shopper\'s browser (as defined in IETF BCP 47).
     * @return language
     */
+    @namespaceAccessible
     public String language { get; set; }
 
     /**
     * The total height of the shopper\'s device screen in pixels.
     * @return screenHeight
     */
+    @namespaceAccessible
     public Integer screenHeight { get; set; }
 
     /**
     * The total width of the shopper\'s device screen in pixels.
     * @return screenWidth
     */
+    @namespaceAccessible
     public Integer screenWidth { get; set; }
 
     /**
     * Time difference between UTC time and the shopper\'s browser local time, in minutes.
     * @return timeZoneOffset
     */
+    @namespaceAccessible
     public Integer timeZoneOffset { get; set; }
 
     /**
     * The user agent value of the shopper\'s browser.
     * @return userAgent
     */
+    @namespaceAccessible
     public String userAgent { get; set; }
 
     @namespaceAccessible
