--- a/force-app/main/default/classes/Card.cls
+++ b/force-app/main/default/classes/Card.cls
@@ -15,48 +15,56 @@ public with sharing class Card {
     * The [card verification code](https://docs.adyen.com/payments-fundamentals/payment-glossary#card-security-code-cvc-cvv-cid) (1-20 characters). Depending on the card brand, it is known also as:\n* CVV2/CVC2 – length: 3 digits\n* CID – length: 4 digits\n> If you are using [Client-Side Encryption](https://docs.adyen.com/classic-integration/cse-integration-ecommerce), the CVC code is present in the encrypted data. You must never post the card details to the server.\n> This field must be always present in a [one-click payment request](https://docs.adyen.com/classic-integration/recurring-payments).\n> When this value is returned in a response, it is always empty because it is not stored.
     * @return cvc
     */
+    @namespaceAccessible
     public String cvc { get; set; }
 
     /**
     * The card expiry month.\nFormat: 2 digits, zero-padded for single digits. For example:\n* 03 = March\n* 11 = November
     * @return expiryMonth
     */
+    @namespaceAccessible
     public String expiryMonth { get; set; }
 
     /**
     * The card expiry year.\nFormat: 4 digits. For example: 2020
     * @return expiryYear
     */
+    @namespaceAccessible
     public String expiryYear { get; set; }
 
     /**
     * The name of the cardholder, as printed on the card.
     * @return holderName
     */
+    @namespaceAccessible
     public String holderName { get; set; }
 
     /**
     * The issue number of the card (for some UK debit cards only).
     * @return issueNumber
     */
+    @namespaceAccessible
     public String issueNumber { get; set; }
 
     /**
     * The card number (4-19 characters). Do not use any separators.\nWhen this value is returned in a response, only the last 4 digits of the card number are returned.
     * @return number
     */
+    @namespaceAccessible
     public String number_x { get; set; }
 
     /**
     * The month component of the start date (for some UK debit cards only).
     * @return startMonth
     */
+    @namespaceAccessible
     public String startMonth { get; set; }
 
     /**
     * The year component of the start date (for some UK debit cards only).
     * @return startYear
     */
+    @namespaceAccessible
     public String startYear { get; set; }
 
     private static final Map<String, String> propertyMappings = new Map<String, String>{
