--- a/force-app/main/default/classes/CommonField.cls
+++ b/force-app/main/default/classes/CommonField.cls
@@ -15,12 +15,14 @@ public with sharing class CommonField {
     * Name of the field. For example, Name of External Platform.
     * @return name
     */
+    @namespaceAccessible
     public String name { get; set; }
 
     /**
     * Version of the field. For example, Version of External Platform.
     * @return version
     */
+    @namespaceAccessible
     public String version { get; set; }
 
     @namespaceAccessible
