--- a/force-app/main/default/classes/DefaultPaymentMethodDetails.cls
+++ b/force-app/main/default/classes/DefaultPaymentMethodDetails.cls
@@ -14,6 +14,7 @@ public with sharing class DefaultPaymentMethodDetails implements PaymentMethodDe
     /**
     * @return type
     */
+    @namespaceAccessible
     public String type { get; set; }
 
     @namespaceAccessible
