--- a/force-app/main/default/classes/PaymentsDetailsRequest.cls
+++ b/force-app/main/default/classes/PaymentsDetailsRequest.cls
@@ -15,24 +15,28 @@ public with sharing class PaymentsDetailsRequest {
     * Get details
     * @return details
     */
+    @namespaceAccessible
     public Map<String, String> details { get; set; }
 
     /**
     * The `paymentData` value that you received in the response to the `/payments` call.
     * @return paymentData
     */
+    @namespaceAccessible
     public String paymentData { get; set; }
 
     /**
     * Get riskData
     * @return riskData
     */
+    @namespaceAccessible
     public RiskData riskData { get; set; }
 
     /**
     * Change the `authenticationOnly` indicator originally set in the `/payments` request. Only needs to be set if you want to modify the value set previously.
     * @return threeDSAuthenticationOnly
     */
+    @namespaceAccessible
     public Boolean threeDSAuthenticationOnly { get; set; }
 
     @namespaceAccessible
