modified properties for DisableResponse

--- a/force-app/main/default/classes/DisableResponse.cls
+++ b/force-app/main/default/classes/DisableResponse.cls
@@ -3,5 +3,6 @@ global with sharing class DisableResponse {
     * The response from Disable Request.
     * @return response
     */
+    @namespaceAccessible
     public String response { get; set; }
 }
