--- a/force-app/main/default/classes/CaptureRequest.cls
+++ b/force-app/main/default/classes/CaptureRequest.cls
@@ -5,10 +5,19 @@
 @namespaceAccessible
 public with sharing class CaptureRequest {
     @namespaceAccessible
+    public String additionalData;
+
+    @namespaceAccessible
+    public ApplicationInfo applicationInfo;
+
+    @namespaceAccessible
     public String originalReference;
 
     @namespaceAccessible
     public Amount modificationAmount;
+
+    @namespaceAccessible
+    public Amount amount;
 
     @namespaceAccessible
     public String reference;
