--- a/force-app/main/default/classes/RiskData.cls
+++ b/force-app/main/default/classes/RiskData.cls
@@ -1,8 +1,7 @@
 /*
-* Adyen Checkout API
-* Adyen Checkout API provides a simple and flexible way to initiate and authorise online payments.
-* You can use the same integration for payments made with cards (including 3D Secure), mobile wallets, and local payment methods (for example, iDEAL and Sofort).
-* This API reference provides information on available endpoints and how to interact with them. To learn more about the API, visit [Checkout documentation](https://docs.adyen.com/checkout).\n\n## Authentication\nEach request to the Checkout API must be signed with an API key. For this, obtain an API Key from your Customer Area, as described in [How to get the API key](https://docs.adyen.com/user-management/how-to-get-the-api-key). Then set this key to the `X-API-Key` header value, for example:\n\n```\ncurl\n-H "Content-Type: application/json" \\n-H "X-API-Key: Your_Checkout_API_key" \\n...\n```\nNote that when going live, you need to generate a new API Key to access the [live endpoints](https://docs.adyen.com/development-resources/live-endpoints).\n\n## Versioning\nCheckout API supports versioning of its endpoints through a version suffix in the endpoint URL. This suffix has the following format: "vXX", where XX is the version number.\n\nFor example:\n```\nhttps://checkout-test.adyen.com/v64/payments\n```
+* Adyen Checkout Sessions API
+*
+* Any risk-related settings to apply to the payment.
 *
 * Contact: support@adyen.com
 *
@@ -18,10 +17,34 @@ public with sharing class RiskData {
     @namespaceAccessible
     public String clientData { get; set; }
 
+    /**
+    * Any custom fields used as part of the input to configured risk rules.
+    * @return customFields
+    */
     @namespaceAccessible
+    public Map<String, String> customFields {get;set;}
+
+    /**
+    * An integer value that is added to the normal fraud score. The value can be either positive or negative.
+    * @return fraudOffset
+    */
+    @namespaceAccessible
+	public Integer fraudOffset {get;set;}
+
+	/**
+    * The risk profile to assign to this payment. When left empty, the merchant-level account's default risk profile will be applied.
+    * @return profileReference
+    */
+    @namespaceAccessible
+	public String profileReference {get;set;}
+
+	@namespaceAccessible
     public static RiskData getExample() {
         RiskData riskData = new RiskData();
         riskData.clientData = '';
+        riskData.customFields = new Map<String, String>();
+        riskData.fraudOffset = 1;
+        riskData.profileReference = '';
         return riskData;
     }
 
@@ -29,7 +52,10 @@ public with sharing class RiskData {
     public Boolean equals(Object obj) {
         if (obj instanceof RiskData) {
             RiskData riskData = (RiskData) obj;
-            return this.clientData == riskData.clientData;
+            return this.clientData == riskData.clientData
+                && this.customFields == riskData.customFields
+                && this.fraudOffset == riskData.fraudOffset
+                && this.profileReference == riskData.profileReference;
         }
         return false;
     }
@@ -38,6 +64,9 @@ public with sharing class RiskData {
     public Integer hashCode() {
         Integer hashCode = 43;
         hashCode = (17 * hashCode) + (clientData == null ? 0 : System.hashCode(clientData));
+        hashCode = (17 * hashCode) + (customFields == null ? 0 : System.hashCode(customFields));
+        hashCode = (17 * hashCode) + (fraudOffset == null ? 0 : System.hashCode(fraudOffset));
+        hashCode = (17 * hashCode) + (profileReference == null ? 0 : System.hashCode(profileReference));
         return hashCode;
     }
 }
