--- a/force-app/main/default/classes/CancelResponse.cls
+++ b/force-app/main/default/classes/CancelResponse.cls
@@ -1,33 +1,64 @@
 /*
 * Represents the capture response object of the Adyen API
 */
-
 @namespaceAccessible
 public with sharing class CancelResponse {
 
+    /**
+    * Get errorCode
+    * @return errorCode
+    */
     @namespaceAccessible
-    public String errorCode;
+    public String errorCode { get; set; }
 
+    /**
+    * Get errorType
+    * @return errorType
+    */
     @namespaceAccessible
-    public String errorType;
+    public String errorType { get; set; }
 
+    /**
+    * Get message
+    * @return message
+    */
     @namespaceAccessible
-    public String message;
+    public String message { get; set; }
 
+    /**
+    * Get merchantAccount
+    * @return merchantAccount
+    */
     @namespaceAccessible
-    public String merchantAccount;
+    public String merchantAccount { get; set; }
 
+    /**
+    * Get paymentPspReference
+    * @return paymentPspReference
+    */
     @namespaceAccessible
-    public String paymentPspReference;
+    public String paymentPspReference { get; set; }
 
+    /**
+    * Get pspReference
+    * @return pspReference
+    */
     @namespaceAccessible
-    public String pspReference;
+    public String pspReference { get; set; }
 
+    /**
+    * Get reference
+    * @return reference
+    */
     @namespaceAccessible
-    public String reference;
+    public String reference { get; set; }
 
+    /**
+    * Get status
+    * @return status
+    */
     @namespaceAccessible
-    public String status;
+    public String status { get; set; }
 
     @namespaceAccessible
     public CancelResponse(){}
