--- a/force-app/main/default/classes/CaptureRequest.cls
+++ b/force-app/main/default/classes/CaptureRequest.cls
@@ -1,29 +1,57 @@
 /*
 * Represents an Adyen Capture Request
 */
-
 @namespaceAccessible
 public with sharing class CaptureRequest {
+    
+    /**
+    * additional data
+    * @return additionalData
+    */
     @namespaceAccessible
-    public String additionalData;
+    public String additionalData { get; set; }
 
+    /**
+    * application info
+    * @return applicationInfo
+    */
     @namespaceAccessible
-    public ApplicationInfo applicationInfo;
+    public ApplicationInfo applicationInfo { get; set; }
 
+    /**
+    * original payment reference
+    * @return originalReference
+    */
     @namespaceAccessible
-    public String originalReference;
+    public String originalReference { get; set; }
 
+    /**
+    * Payment capture amount
+    * @return amount
+    */
     @namespaceAccessible
-    public Amount modificationAmount;
+    public Amount modificationAmount { get; set; }
 
+    /**
+    * Payment capture amount
+    * @return amount
+    */
     @namespaceAccessible
-    public Amount amount;
+    public Amount amount { get; set; }
 
+    /**
+    * The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
+    * @return reference
+    */
     @namespaceAccessible
-    public String reference;
+    public String reference { get; set; }
 
+    /**
+    * Merchant account name
+    * @return merchantAccount
+    */
     @namespaceAccessible
-    public String merchantAccount;
+    public String merchantAccount { get; set; }
 
     @namespaceAccessible
     public CaptureRequest(){}
