--- a/force-app/main/default/classes/RefundRequest.cls
+++ b/force-app/main/default/classes/RefundRequest.cls
@@ -1,9 +1,9 @@
 /*
-* Represents an Adyen Capture Request
+* Represents an Adyen Refund Request
 */
 @namespaceAccessible
-public with sharing class CaptureRequest implements ModificationRequest {
-    
+public with sharing class RefundRequest implements ModificationRequest {
+
     /**
     * additional data
     * @return additionalData
@@ -26,14 +26,14 @@ public with sharing class CaptureRequest implements ModificationRequest {
     public String originalReference { get; set; }
 
     /**
-    * Payment capture amount
+    * Payment refund amount
     * @return amount
     */
     @namespaceAccessible
     public Amount modificationAmount { get; set; }
 
     /**
-    * Payment capture amount
+    * Payment refund amount
     * @return amount
     */
     @namespaceAccessible
@@ -54,5 +54,6 @@ public with sharing class CaptureRequest implements ModificationRequest {
     public String merchantAccount { get; set; }
 
     @namespaceAccessible
-    public CaptureRequest(){}
+    public RefundRequest(){}
+
 }
