--- a/force-app/main/default/classes/RefundResponse.cls
+++ b/force-app/main/default/classes/RefundResponse.cls
@@ -1,9 +1,9 @@
 /*
-* Represents the capture response object of the Adyen API
+* Represents the refund response object of the Adyen API
 */
 
 @namespaceAccessible
-public with sharing class CaptureResponse implements ModificationResponse {
+public with sharing class RefundResponse implements ModificationResponse {
 
     /**
     * Get payment amount
@@ -34,7 +34,7 @@ public with sharing class CaptureResponse implements ModificationResponse {
     public String paymentPspReference { get; set; }
 
     /**
-    * Get this capture request psp reference
+    * Get this refund request psp reference
     * @return pspReference
     */
     @namespaceAccessible
@@ -55,5 +55,6 @@ public with sharing class CaptureResponse implements ModificationResponse {
     public String status { get; set; }
 
     @namespaceAccessible
-    public CaptureResponse(){}
+    public RefundResponse(){}
+
 }
