Changes related to B2BL package

--- a/force-app/main/default/classes/CaptureResponse.cls
+++ b/force-app/main/default/classes/CaptureResponse.cls
@@ -19,6 +19,16 @@ public with sharing class CaptureResponse implements ModificationResponse {
     @namespaceAccessible
     public String message { get; set; }
 
+    @namespaceAccessible
+    public String getMessage() {
+        return message;
+    }
+
+    @namespaceAccessible
+    public void setMessage(String message) {
+        this.message = message;
+    }
+
     /**
     * Get merchant account name
     * @return merchantAccount
@@ -40,6 +50,16 @@ public with sharing class CaptureResponse implements ModificationResponse {
     @namespaceAccessible
     public String pspReference { get; set; }
 
+    @namespaceAccessible
+    public String getPSPReference() {
+        return pspReference;
+    }
+
+    @namespaceAccessible
+    public void setPSPReference(String pspReference) {
+        this.pspReference = pspReference;
+    }
+
     /**
     * Get payment reference
     * @return reference
@@ -47,12 +67,32 @@ public with sharing class CaptureResponse implements ModificationResponse {
     @namespaceAccessible
     public String reference { get; set; }
 
+    @namespaceAccessible
+    public String getReference() {
+        return reference;
+    }
+
+    @namespaceAccessible
+    public void setReference(String reference) {
+        this.reference = reference;
+    }
+
     /**
     * Get status
     * @return status
     */
     @namespaceAccessible
     public String status { get; set; }
+
+    @namespaceAccessible
+    public String getStatus() {
+        return status;
+    }
+
+    @namespaceAccessible
+    public void setStatus(String status) {
+        this.status = status;
+    }
 
     @namespaceAccessible
     public CaptureResponse(){}
