--- a/force-app/main/default/classes/ModificationResponse.cls
+++ b/force-app/main/default/classes/ModificationResponse.cls
@@ -1,4 +1,16 @@
 @namespaceAccessible
 public interface ModificationResponse {
     //interface to declare common methods from CaptureResponse and RefundResponse
+    String getReference();
+    void setReference(String reference);
+
+    String getStatus();
+    void setStatus(String status);
+
+    String getMessage();
+    void setMessage(String message);
+
+    String getPSPReference();
+    void setPSPReference(String pspReference);
+
 }
